<resources>
    <!-- Strings used for fragments for navigation -->

    <!-- Strings used for fragments for navigation -->
    <string name="app_name">GPharmacy</string>
    <string name="hint_search">Search for drugs,doctors,etc...</string>
    <string name="popular_products">Popular Products</string>
    <string name="consultation">Consultation</string>
    <string name="product_detail">Product Detail</string>
    <string name="price">Price</string>

    <string name="doctor">Doctor</string>
    <string name="expert_89">89 Experts</string>
    <string name="expert_doctor">Expert Doctor</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>

    <string name="cardio">Cardio</string>
    <string name="title_activity_shop">shop</string>

    <string name="panadol">Panadol</string>

    <string name="qpanadol">1 Strip</string>

    <string name="ppanadol">Rp 12.000</string>

    <string name="detailpanadol">Panadol is a drug that is useful for relieving headaches, toothaches, muscle aches, nagging pains, and reducing fever. Several variants of Panadol can also relieve flu symptoms, such as nasal congestion and sneezing accompanied by a cough without phlegm.</string>
    <string name="title_activity">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>