<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginRight="20dp"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@null"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:tint="@color/pink" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/panadol"
            android:id="@+id/item_shop_images"/>
        <TextView
            android:id="@+id/item_shop_text_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panadol"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_shop_text_quantity"
            android:text="@string/qpanadol"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="7dp"
            />
        <TextView
            android:id="@+id/item_shop_text_price"
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ppanadol"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>