<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <FrameLayout
        android:id="@+id/maincontainer"
        android:background="@color/aqua_blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomnavigation">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="100dp"
                app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_margin="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:weightSum="5"
                        android:gravity="center"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="4">
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Hi, "
                                android:textColor="@color/black"
                                android:textSize="32sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/circleImageView"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                />
                            <TextView
                                android:id="@+id/nametop"
                                android:layout_marginLeft="10dp"
                                app:layout_constraintHorizontal_weight="4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Name"
                                android:textColor="@color/black"
                                android:textSize="32sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/circleImageView"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </LinearLayout>


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/circleImageView"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/character"
                            app:civ_border_color="@color/black"
                            app:civ_border_width="3dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_weight="1"/>


                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_search"
                        android:layout_margin="16dp"
                        app:startIconDrawable="@drawable/ic_baseline_search_24"
                        app:hintTextColor="@color/color1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/color1"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/doctor"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="16dp"
                        android:textColor="@color/black"/>
                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:dividerColor="@color/grey"
                        android:layout_marginHorizontal="18dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="10">
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:cardCornerRadius="8dp"
                            android:layout_margin="10dp"
                            android:layout_weight="5"
                            android:foreground="?attr/selectableItemBackground"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_margin="10dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/consultation"
                                    android:textColor="@color/black"/>

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:src="@drawable/message"
                                    android:layout_gravity="center"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="3 Mins"
                                    android:textSize="15sp"
                                    android:textColor="@color/black"
                                    android:layout_marginTop="10dp"
                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Fast Consultation"
                                    android:textSize="15sp"
                                    android:textColor="@color/black"/>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:cardCornerRadius="8dp"
                            android:layout_margin="10dp"
                            android:layout_weight="5"
                            android:foreground="?attr/selectableItemBackground"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_margin="10dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/doctor"
                                    android:textColor="@color/black"/>

                                <ImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:src="@drawable/doctor1"
                                    android:layout_gravity="center"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/expert_89"
                                    android:textSize="15sp"
                                    android:textColor="@color/black"
                                    android:layout_marginTop="10dp"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/expert_doctor"
                                    android:textSize="15sp"
                                    android:textColor="@color/black"/>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/categories"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/see_all"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_marginRight="16dp"
                            />
                    </LinearLayout>
                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/linear_layout_categories"
                            android:orientation="horizontal"/>
                    </HorizontalScrollView>
                    <LinearLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/popular_products"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/see_all"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_marginRight="16dp"
                            />
                    </LinearLayout>
                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/linear_layout_popular"
                            android:orientation="horizontal"/>
                    </HorizontalScrollView>

                    <LinearLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Top Article"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:layout_marginLeft="16dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/see_all"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:layout_marginRight="16dp"
                            />
                    </LinearLayout>
<!--                    <androidx.cardview.widget.CardView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_margin="16dp">-->
<!--                        <ImageView-->
<!--                            android:layout_width="50dp"-->
<!--                            android:src="@drawable/nurse"-->
<!--                            android:layout_height="50dp"/>-->
<!--                    </androidx.cardview.widget.CardView>-->


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </ScrollView>
    </FrameLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_main"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        app:itemRippleColor="@color/purple_200"
        app:itemIconTint="@color/icon_color"
        />

</androidx.constraintlayout.widget.ConstraintLayout>